--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 								
 								<div class=publication-content>
 									<div class=publi-image>
-										<img src="./images/BezelGlide.png">
+										<img src="./images/bezelGlide.png">
 									</div>
 									<div class=publi-text>
 										<b>BezelGlide: Interacting with Graphs on Smartwatches with Minimal Screen Occlusion</b></br>
