--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
 								<div class=publication-content>
 									<div class=publi-image>
-										<img src="./images/robots.png">
+										<img src="./images/robot.png">
 									</div>
 									<div class=publi-text>
 										<b>Robots for Inclusive Play: Co-designing an Educational Game With Visually Impaired and sighted Childrens <i class="icon style1 fa-trophy" title="Best paper award"></i></b></br>
