--- a/index.html
+++ b/index.html
@@ -56,8 +56,9 @@
 									<div class=publi-text> 
 										<b>Tactile Fixations: A Behavioral Marker on How People with Visual Impairments Explore Raised-line Graphics</b></br>
 										Kaixing Zhao, Sandra Bardot, Marcos Serrano, Mathieu Simonnet, Bernard Oriola, Christophe Jouffrais</br>
-										Accepted to CHI 2021
+										CHI 2021
 										<ul class="icons">
+											<li><a href="https://dl-acm-org.uml.idm.oclc.org/doi/pdf/10.1145/3411764.3445578" class="icon fa-file-pdf-o" target="_blank"></a></li>
 											<li><a href="https://www.youtube.com/watch?v=6DVlD1fw_U0" class="icon fa-youtube" target="_blank"></a></li>
 										</ul>
 									</div>	
@@ -70,8 +71,11 @@
 									<div class=publi-text>
 										<b>BezelGlide: Interacting with Graphs on Smartwatches with Minimal Screen Occlusion</b></br>
 										Ali Neshati, Bradley Rey, Ahmed Shariff Mohommed Faleel, Sandra Bardot, Celine Latulipe, Pourang Irani </br>
-										Accepted to CHI 2021
-										<ul></ul>
+										CHI 2021
+										<ul class="icons">
+											<li><a href="https://dl-acm-org.uml.idm.oclc.org/doi/pdf/10.1145/3411764.3445201" class="icon fa-file-pdf-o" target="_blank"></a></li>
+											<li><a href="https://www.youtube.com/watch?v=gJ_x89-Yuj8" class="icon fa-youtube" target="_blank"></a></li>
+										</ul>
 									</div>
 								</div>
 								
